mean and medians of the features with missing values entries

--- a/notebook/main.ipynb
+++ b/notebook/main.ipynb
@@ -175,6 +175,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "7d7df789",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3276, 10)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "1f45c4ff",
    "metadata": {},
@@ -461,6 +482,111 @@
    ],
    "source": [
     "data.duplicated().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3c7a891",
+   "metadata": {},
+   "source": [
+    "### cleaning the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "e5865358",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ph                 491\n",
+       "Hardness             0\n",
+       "Solids               0\n",
+       "Chloramines          0\n",
+       "Sulfate            781\n",
+       "Conductivity         0\n",
+       "Organic_carbon       0\n",
+       "Trihalomethanes    162\n",
+       "Turbidity            0\n",
+       "Potability           0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "bbb24930",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "333.073545745888 333.7757766108135\n"
+     ]
+    }
+   ],
+   "source": [
+    "# mean and median for the sulfate entry\n",
+    "print(\n",
+    "    data[\"Sulfate\"].median(),\n",
+    "    data[\"Sulfate\"].mean()\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "a95ba92b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.036752103833548 7.080794504276835\n"
+     ]
+    }
+   ],
+   "source": [
+    "# mean and median for the ph entry\n",
+    "print(\n",
+    "    data[\"ph\"].median(),\n",
+    "    data[\"ph\"].mean()\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "4c81944d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "66.62248509808484 66.39629294676803\n"
+     ]
+    }
+   ],
+   "source": [
+    "# mean and median for trihalomethanes entry\n",
+    "print(\n",
+    "    data[\"Trihalomethanes\"].median(),\n",
+    "    data[\"Trihalomethanes\"].mean()\n",
+    ")"
    ]
   },
   {
