filling missing values with the means

--- a/notebook/main.ipynb
+++ b/notebook/main.ipynb
@@ -590,6 +590,85 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "8e241b1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ph', 'Sulfate', 'Trihalomethanes']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# filling the missing values with the means\n",
+    "cols_with_na = data.columns[data.isnull().any()].tolist()\n",
+    "cols_with_na"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "a73f9883",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ph                 0\n",
+       "Hardness           0\n",
+       "Solids             0\n",
+       "Chloramines        0\n",
+       "Sulfate            0\n",
+       "Conductivity       0\n",
+       "Organic_carbon     0\n",
+       "Trihalomethanes    0\n",
+       "Turbidity          0\n",
+       "Potability         0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# filling with means\n",
+    "for column in cols_with_na:\n",
+    "    data[column] = data[column].fillna(data[column].mean())\n",
+    "\n",
+    "data.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "1f0eb6b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3276, 10)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "054e5d2b",
    "metadata": {},
