--- a/notebook/main.ipynb
+++ b/notebook/main.ipynb
@@ -9,16 +9,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "4e325a90",
-   "metadata": {},
-   "source": [
-    "## dependencies"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "id": "ef288020",
    "metadata": {},
    "outputs": [],
@@ -26,7 +18,11 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "import pickle"
    ]
   },
   {
@@ -1625,9 +1621,310 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a96f3bc6",
+   "metadata": {},
+   "source": [
+    "## model building, training and optimization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "5c229b21",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3276, 9) (3276,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# feature and labels selection\n",
+    "features, target = data.drop(\"Potability\", axis=1), data[\"Potability\"]\n",
+    "print(features.shape, target.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "6ad6b626",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ph</th>\n",
+       "      <th>Hardness</th>\n",
+       "      <th>Solids</th>\n",
+       "      <th>Chloramines</th>\n",
+       "      <th>Sulfate</th>\n",
+       "      <th>Conductivity</th>\n",
+       "      <th>Organic_carbon</th>\n",
+       "      <th>Trihalomethanes</th>\n",
+       "      <th>Turbidity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7.080795</td>\n",
+       "      <td>204.890455</td>\n",
+       "      <td>20791.318981</td>\n",
+       "      <td>7.300212</td>\n",
+       "      <td>368.516441</td>\n",
+       "      <td>564.308654</td>\n",
+       "      <td>10.379783</td>\n",
+       "      <td>86.990970</td>\n",
+       "      <td>2.963135</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3.716080</td>\n",
+       "      <td>129.422921</td>\n",
+       "      <td>18630.057858</td>\n",
+       "      <td>6.635246</td>\n",
+       "      <td>333.775777</td>\n",
+       "      <td>592.885359</td>\n",
+       "      <td>15.180013</td>\n",
+       "      <td>56.329076</td>\n",
+       "      <td>4.500656</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8.099124</td>\n",
+       "      <td>224.236259</td>\n",
+       "      <td>19909.541732</td>\n",
+       "      <td>9.275884</td>\n",
+       "      <td>333.775777</td>\n",
+       "      <td>418.606213</td>\n",
+       "      <td>16.868637</td>\n",
+       "      <td>66.420093</td>\n",
+       "      <td>3.055934</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8.316766</td>\n",
+       "      <td>214.373394</td>\n",
+       "      <td>22018.417441</td>\n",
+       "      <td>8.059332</td>\n",
+       "      <td>356.886136</td>\n",
+       "      <td>363.266516</td>\n",
+       "      <td>18.436524</td>\n",
+       "      <td>100.341674</td>\n",
+       "      <td>4.628771</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>9.092223</td>\n",
+       "      <td>181.101509</td>\n",
+       "      <td>17978.986339</td>\n",
+       "      <td>6.546600</td>\n",
+       "      <td>310.135738</td>\n",
+       "      <td>398.410813</td>\n",
+       "      <td>11.558279</td>\n",
+       "      <td>31.997993</td>\n",
+       "      <td>4.075075</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3271</th>\n",
+       "      <td>4.668102</td>\n",
+       "      <td>193.681735</td>\n",
+       "      <td>47580.991603</td>\n",
+       "      <td>7.166639</td>\n",
+       "      <td>359.948574</td>\n",
+       "      <td>526.424171</td>\n",
+       "      <td>13.894419</td>\n",
+       "      <td>66.687695</td>\n",
+       "      <td>4.435821</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3272</th>\n",
+       "      <td>7.808856</td>\n",
+       "      <td>193.553212</td>\n",
+       "      <td>17329.802160</td>\n",
+       "      <td>8.061362</td>\n",
+       "      <td>333.775777</td>\n",
+       "      <td>392.449580</td>\n",
+       "      <td>19.903225</td>\n",
+       "      <td>66.396293</td>\n",
+       "      <td>2.798243</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3273</th>\n",
+       "      <td>9.419510</td>\n",
+       "      <td>175.762646</td>\n",
+       "      <td>33155.578218</td>\n",
+       "      <td>7.350233</td>\n",
+       "      <td>333.775777</td>\n",
+       "      <td>432.044783</td>\n",
+       "      <td>11.039070</td>\n",
+       "      <td>69.845400</td>\n",
+       "      <td>3.298875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3274</th>\n",
+       "      <td>5.126763</td>\n",
+       "      <td>230.603758</td>\n",
+       "      <td>11983.869376</td>\n",
+       "      <td>6.303357</td>\n",
+       "      <td>333.775777</td>\n",
+       "      <td>402.883113</td>\n",
+       "      <td>11.168946</td>\n",
+       "      <td>77.488213</td>\n",
+       "      <td>4.708658</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3275</th>\n",
+       "      <td>7.874671</td>\n",
+       "      <td>195.102299</td>\n",
+       "      <td>17404.177061</td>\n",
+       "      <td>7.509306</td>\n",
+       "      <td>333.775777</td>\n",
+       "      <td>327.459760</td>\n",
+       "      <td>16.140368</td>\n",
+       "      <td>78.698446</td>\n",
+       "      <td>2.309149</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3276 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            ph    Hardness        Solids  Chloramines     Sulfate  \\\n",
+       "0     7.080795  204.890455  20791.318981     7.300212  368.516441   \n",
+       "1     3.716080  129.422921  18630.057858     6.635246  333.775777   \n",
+       "2     8.099124  224.236259  19909.541732     9.275884  333.775777   \n",
+       "3     8.316766  214.373394  22018.417441     8.059332  356.886136   \n",
+       "4     9.092223  181.101509  17978.986339     6.546600  310.135738   \n",
+       "...        ...         ...           ...          ...         ...   \n",
+       "3271  4.668102  193.681735  47580.991603     7.166639  359.948574   \n",
+       "3272  7.808856  193.553212  17329.802160     8.061362  333.775777   \n",
+       "3273  9.419510  175.762646  33155.578218     7.350233  333.775777   \n",
+       "3274  5.126763  230.603758  11983.869376     6.303357  333.775777   \n",
+       "3275  7.874671  195.102299  17404.177061     7.509306  333.775777   \n",
+       "\n",
+       "      Conductivity  Organic_carbon  Trihalomethanes  Turbidity  \n",
+       "0       564.308654       10.379783        86.990970   2.963135  \n",
+       "1       592.885359       15.180013        56.329076   4.500656  \n",
+       "2       418.606213       16.868637        66.420093   3.055934  \n",
+       "3       363.266516       18.436524       100.341674   4.628771  \n",
+       "4       398.410813       11.558279        31.997993   4.075075  \n",
+       "...            ...             ...              ...        ...  \n",
+       "3271    526.424171       13.894419        66.687695   4.435821  \n",
+       "3272    392.449580       19.903225        66.396293   2.798243  \n",
+       "3273    432.044783       11.039070        69.845400   3.298875  \n",
+       "3274    402.883113       11.168946        77.488213   4.708658  \n",
+       "3275    327.459760       16.140368        78.698446   2.309149  \n",
+       "\n",
+       "[3276 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "f0dc67bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       0\n",
+       "1       0\n",
+       "2       0\n",
+       "3       0\n",
+       "4       0\n",
+       "       ..\n",
+       "3271    1\n",
+       "3272    1\n",
+       "3273    1\n",
+       "3274    1\n",
+       "3275    1\n",
+       "Name: Potability, Length: 3276, dtype: int64"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "b3ae7210",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3276, 9) (2620, 9) (656, 9) (2620,) (656,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# train test split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    features,\n",
+    "    target,\n",
+    "    test_size = 0.2,\n",
+    "    stratify = target,\n",
+    "    random_state = 21,\n",
+    ")\n",
+    "print(features.shape, X_train.shape, X_test.shape, y_train.shape, y_test.shape)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a96f3bc6",
+   "id": "90bb4122",
    "metadata": {},
    "outputs": [],
    "source": []
