--- a/notebook/main.ipynb
+++ b/notebook/main.ipynb
@@ -1632,8 +1632,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "89b6a65d",
+   "metadata": {},
+   "source": [
+    "### capping outliers"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "id": "0f4e80fb",
    "metadata": {},
    "outputs": [],
@@ -1658,6 +1666,112 @@
     "                          np.where(data[col] > upper_bound, upper_bound, data[col]))\n",
     "    \n",
     "    return data_capped\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "247afc4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before capping:\n",
+      "count    3276.000000\n",
+      "mean      333.775777\n",
+      "std        36.142612\n",
+      "min       129.000000\n",
+      "25%       317.094638\n",
+      "50%       333.775777\n",
+      "75%       350.385756\n",
+      "max       481.030642\n",
+      "Name: Sulfate, dtype: float64\n",
+      "\n",
+      "After capping:\n",
+      "count    3276.000000\n",
+      "mean      333.788678\n",
+      "std        31.768004\n",
+      "min       267.157960\n",
+      "25%       317.094638\n",
+      "50%       333.775777\n",
+      "75%       350.385756\n",
+      "max       400.322434\n",
+      "Name: Sulfate, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# whisker replacement\n",
+    "data_capped = cap_outliers_iqr(data)\n",
+    "\n",
+    "# Verify changes on one column\n",
+    "print(\"Before capping:\")\n",
+    "print(data['Sulfate'].describe())\n",
+    "\n",
+    "print(\"\\nAfter capping:\")\n",
+    "print(data_capped['Sulfate'].describe())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "60245ea8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ph outliers:\n",
+      " None\n",
+      "0\n",
+      "--------------------------------------------------\n",
+      "Hardness outliers:\n",
+      " None\n",
+      "0\n",
+      "--------------------------------------------------\n",
+      "Solids outliers:\n",
+      " None\n",
+      "0\n",
+      "--------------------------------------------------\n",
+      "Chloramines outliers:\n",
+      " None\n",
+      "0\n",
+      "--------------------------------------------------\n",
+      "Sulfate outliers:\n",
+      " None\n",
+      "0\n",
+      "--------------------------------------------------\n",
+      "Conductivity outliers:\n",
+      " None\n",
+      "0\n",
+      "--------------------------------------------------\n",
+      "Organic_carbon outliers:\n",
+      " None\n",
+      "0\n",
+      "--------------------------------------------------\n",
+      "Trihalomethanes outliers:\n",
+      " None\n",
+      "0\n",
+      "--------------------------------------------------\n",
+      "Turbidity outliers:\n",
+      " None\n",
+      "0\n",
+      "--------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "# seeing of outliers now\n",
+    "outliers = get_outliers(data_capped)\n",
+    "for feature, outs in outliers.items():\n",
+    "    print(\n",
+    "        feature, \"outliers:\\n\", outs if outs else \"None\"\n",
+    "    )\n",
+    "    print(len(outs))\n",
+    "    print(\"-\"*50)"
    ]
   },
   {
