--- a/notebook/main.ipynb
+++ b/notebook/main.ipynb
@@ -1641,7 +1641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 117,
    "id": "0f4e80fb",
    "metadata": {},
    "outputs": [],
@@ -1651,7 +1651,7 @@
     "\n",
     "    data_capped = data.copy()\n",
     "    if cols is None:\n",
-    "        cols = data.select_dtypes(include=[np.number]).columns.tolist()\n",
+    "        cols = data.columns.tolist()\n",
     "    \n",
     "    for col in cols:\n",
     "        Q1 = data[col].quantile(0.25)\n",
@@ -1670,7 +1670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 122,
    "id": "247afc4a",
    "metadata": {},
    "outputs": [
@@ -1712,6 +1712,29 @@
     "\n",
     "print(\"\\nAfter capping:\")\n",
     "print(data_capped['Sulfate'].describe())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "49b8162f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['ph', 'Hardness', 'Solids', 'Chloramines', 'Sulfate', 'Conductivity',\n",
+       "       'Organic_carbon', 'Trihalomethanes', 'Turbidity', 'Potability'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_capped.columns"
    ]
   },
   {
@@ -2073,6 +2096,188 @@
     "    random_state = 42,\n",
     ")\n",
     "print(features.shape, X_train.shape, X_test.shape, y_train.shape, y_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "c70353e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ph</th>\n",
+       "      <th>Hardness</th>\n",
+       "      <th>Solids</th>\n",
+       "      <th>Chloramines</th>\n",
+       "      <th>Sulfate</th>\n",
+       "      <th>Conductivity</th>\n",
+       "      <th>Organic_carbon</th>\n",
+       "      <th>Trihalomethanes</th>\n",
+       "      <th>Turbidity</th>\n",
+       "      <th>Potability</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7.080795</td>\n",
+       "      <td>204.890455</td>\n",
+       "      <td>20791.318981</td>\n",
+       "      <td>7.300212</td>\n",
+       "      <td>368.516441</td>\n",
+       "      <td>564.308654</td>\n",
+       "      <td>10.379783</td>\n",
+       "      <td>86.990970</td>\n",
+       "      <td>2.963135</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3.889107</td>\n",
+       "      <td>129.422921</td>\n",
+       "      <td>18630.057858</td>\n",
+       "      <td>6.635246</td>\n",
+       "      <td>333.775777</td>\n",
+       "      <td>592.885359</td>\n",
+       "      <td>15.180013</td>\n",
+       "      <td>56.329076</td>\n",
+       "      <td>4.500656</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8.099124</td>\n",
+       "      <td>224.236259</td>\n",
+       "      <td>19909.541732</td>\n",
+       "      <td>9.275884</td>\n",
+       "      <td>333.775777</td>\n",
+       "      <td>418.606213</td>\n",
+       "      <td>16.868637</td>\n",
+       "      <td>66.420093</td>\n",
+       "      <td>3.055934</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8.316766</td>\n",
+       "      <td>214.373394</td>\n",
+       "      <td>22018.417441</td>\n",
+       "      <td>8.059332</td>\n",
+       "      <td>356.886136</td>\n",
+       "      <td>363.266516</td>\n",
+       "      <td>18.436524</td>\n",
+       "      <td>100.341674</td>\n",
+       "      <td>4.628771</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>9.092223</td>\n",
+       "      <td>181.101509</td>\n",
+       "      <td>17978.986339</td>\n",
+       "      <td>6.546600</td>\n",
+       "      <td>310.135738</td>\n",
+       "      <td>398.410813</td>\n",
+       "      <td>11.558279</td>\n",
+       "      <td>31.997993</td>\n",
+       "      <td>4.075075</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         ph    Hardness        Solids  Chloramines     Sulfate  Conductivity  \\\n",
+       "0  7.080795  204.890455  20791.318981     7.300212  368.516441    564.308654   \n",
+       "1  3.889107  129.422921  18630.057858     6.635246  333.775777    592.885359   \n",
+       "2  8.099124  224.236259  19909.541732     9.275884  333.775777    418.606213   \n",
+       "3  8.316766  214.373394  22018.417441     8.059332  356.886136    363.266516   \n",
+       "4  9.092223  181.101509  17978.986339     6.546600  310.135738    398.410813   \n",
+       "\n",
+       "   Organic_carbon  Trihalomethanes  Turbidity  Potability  \n",
+       "0       10.379783        86.990970   2.963135         0.0  \n",
+       "1       15.180013        56.329076   4.500656         0.0  \n",
+       "2       16.868637        66.420093   3.055934         0.0  \n",
+       "3       18.436524       100.341674   4.628771         0.0  \n",
+       "4       11.558279        31.997993   4.075075         0.0  "
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_capped.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "8d42f5a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3276, 9) (2620, 9) (656, 9) (2620,) (656,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# splitting data_capped data\n",
+    "X, y = data_capped.drop(\"Potability\", axis=1), data_capped[\"Potability\"]\n",
+    "\n",
+    "# train test split\n",
+    "X_train_capped, X_capped, y_train_capped, y_test_capped = train_test_split(\n",
+    "    X, y,\n",
+    "    test_size = 0.2,\n",
+    "    stratify = y,\n",
+    "    random_state = 42,\n",
+    ")\n",
+    "print(X.shape, X_train_capped.shape, X_capped.shape, y_train_capped.shape, y_test_capped.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "938d5175",
+   "metadata": {},
+   "source": [
+    "### Remarks so far:\n",
+    "    i have three datasets namely:\n",
+    "        data - original data with outliers (used for benchmarking)\n",
+    "        data_capped - outliers removed (used for tuning and benchmarking comparisons perfomance with original)\n",
+    "        data with resampling (smote oversampling) - derived from original and class balanced using smote:\n",
+    "            X_res, y_res = smote.fit_resample(X_train, y_train)\n",
+    "        data_capped with resampling - as above except smote was applied on capped_data:\n",
+    "            X_cap_res, y_cap_res = smote.fit_resample(X_train_capped, y_train_capped)\n",
+    "        scaled data (will be used for logistic regression):\n",
+    "            scaled original data:\n",
+    "                X_scaled = scaler.fit_transform(X_train, y_train)\n",
+    "                X_cap_scaled =scaler.transform(X_test, y_test)\n",
+    "            scaled data_capped\n"
    ]
   },
   {
