all hail them retarded dataset variation

--- a/notebook/main.ipynb
+++ b/notebook/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 125,
    "id": "ef288020",
    "metadata": {},
    "outputs": [],
@@ -25,6 +25,8 @@
     "from catboost import CatBoostClassifier\n",
     "from xgboost import XGBClassifier\n",
     "from lightgbm import LGBMClassifier\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from imblearn.over_sampling import SMOTE\n",
     "import pickle"
    ]
   },
@@ -1798,14 +1800,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "a96f3bc6",
-   "metadata": {},
-   "source": [
-    "## model building, training and optimization"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 89,
    "id": "5c229b21",
@@ -2074,7 +2068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "id": "b3ae7210",
    "metadata": {},
    "outputs": [
@@ -2087,7 +2081,7 @@
     }
    ],
    "source": [
-    "# train test split\n",
+    "# original data train test split\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    features,\n",
     "    target,\n",
@@ -2100,141 +2094,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "id": "c70353e4",
+   "execution_count": 130,
+   "id": "dc3eb8f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# original data resampling\n",
+    "smote = SMOTE(random_state=21)\n",
+    "X_res, y_res = smote.fit_resample(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "id": "a312a1c2",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ph</th>\n",
-       "      <th>Hardness</th>\n",
-       "      <th>Solids</th>\n",
-       "      <th>Chloramines</th>\n",
-       "      <th>Sulfate</th>\n",
-       "      <th>Conductivity</th>\n",
-       "      <th>Organic_carbon</th>\n",
-       "      <th>Trihalomethanes</th>\n",
-       "      <th>Turbidity</th>\n",
-       "      <th>Potability</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>7.080795</td>\n",
-       "      <td>204.890455</td>\n",
-       "      <td>20791.318981</td>\n",
-       "      <td>7.300212</td>\n",
-       "      <td>368.516441</td>\n",
-       "      <td>564.308654</td>\n",
-       "      <td>10.379783</td>\n",
-       "      <td>86.990970</td>\n",
-       "      <td>2.963135</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3.889107</td>\n",
-       "      <td>129.422921</td>\n",
-       "      <td>18630.057858</td>\n",
-       "      <td>6.635246</td>\n",
-       "      <td>333.775777</td>\n",
-       "      <td>592.885359</td>\n",
-       "      <td>15.180013</td>\n",
-       "      <td>56.329076</td>\n",
-       "      <td>4.500656</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>8.099124</td>\n",
-       "      <td>224.236259</td>\n",
-       "      <td>19909.541732</td>\n",
-       "      <td>9.275884</td>\n",
-       "      <td>333.775777</td>\n",
-       "      <td>418.606213</td>\n",
-       "      <td>16.868637</td>\n",
-       "      <td>66.420093</td>\n",
-       "      <td>3.055934</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>8.316766</td>\n",
-       "      <td>214.373394</td>\n",
-       "      <td>22018.417441</td>\n",
-       "      <td>8.059332</td>\n",
-       "      <td>356.886136</td>\n",
-       "      <td>363.266516</td>\n",
-       "      <td>18.436524</td>\n",
-       "      <td>100.341674</td>\n",
-       "      <td>4.628771</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>9.092223</td>\n",
-       "      <td>181.101509</td>\n",
-       "      <td>17978.986339</td>\n",
-       "      <td>6.546600</td>\n",
-       "      <td>310.135738</td>\n",
-       "      <td>398.410813</td>\n",
-       "      <td>11.558279</td>\n",
-       "      <td>31.997993</td>\n",
-       "      <td>4.075075</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "         ph    Hardness        Solids  Chloramines     Sulfate  Conductivity  \\\n",
-       "0  7.080795  204.890455  20791.318981     7.300212  368.516441    564.308654   \n",
-       "1  3.889107  129.422921  18630.057858     6.635246  333.775777    592.885359   \n",
-       "2  8.099124  224.236259  19909.541732     9.275884  333.775777    418.606213   \n",
-       "3  8.316766  214.373394  22018.417441     8.059332  356.886136    363.266516   \n",
-       "4  9.092223  181.101509  17978.986339     6.546600  310.135738    398.410813   \n",
-       "\n",
-       "   Organic_carbon  Trihalomethanes  Turbidity  Potability  \n",
-       "0       10.379783        86.990970   2.963135         0.0  \n",
-       "1       15.180013        56.329076   4.500656         0.0  \n",
-       "2       16.868637        66.420093   3.055934         0.0  \n",
-       "3       18.436524       100.341674   4.628771         0.0  \n",
-       "4       11.558279        31.997993   4.075075         0.0  "
+       "array([[ 0.51925212,  0.37396679,  0.04224658, ...,  0.58035951,\n",
+       "        -0.37321793, -0.18862721],\n",
+       "       [-0.73387062,  0.94346077, -1.00911153, ..., -2.23634414,\n",
+       "        -1.63106177, -0.50743971],\n",
+       "       [ 0.95640947,  0.98954914,  0.79328241, ...,  0.08613086,\n",
+       "        -0.35892247,  0.55893452],\n",
+       "       ...,\n",
+       "       [-1.10662298,  0.24628477, -0.36811092, ...,  0.18851661,\n",
+       "         1.19505189, -0.38335972],\n",
+       "       [-0.25650092,  0.13095247,  0.25191747, ...,  0.8947599 ,\n",
+       "        -0.26250327, -0.74312083],\n",
+       "       [ 0.07792799, -0.19362496,  0.49913048, ...,  1.33902104,\n",
+       "         0.5155921 ,  0.06423624]], shape=(3196, 9))"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_capped.head()"
+    "# scaling original data for logistic regression\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_res)\n",
+    "X_test_scaled = scaler.transform(X_test)\n",
+    "X_train_scaled"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 127,
    "id": "8d42f5a1",
    "metadata": {},
    "outputs": [
@@ -2251,13 +2160,50 @@
     "X, y = data_capped.drop(\"Potability\", axis=1), data_capped[\"Potability\"]\n",
     "\n",
     "# train test split\n",
-    "X_train_capped, X_capped, y_train_capped, y_test_capped = train_test_split(\n",
+    "X_train_capped, X_test_capped, y_train_capped, y_test_capped = train_test_split(\n",
     "    X, y,\n",
     "    test_size = 0.2,\n",
     "    stratify = y,\n",
     "    random_state = 42,\n",
     ")\n",
-    "print(X.shape, X_train_capped.shape, X_capped.shape, y_train_capped.shape, y_test_capped.shape)"
+    "print(X.shape, X_train_capped.shape, X_test_capped.shape, y_train_capped.shape, y_test_capped.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "id": "6a9c9b2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# capped data resampling\n",
+    "smote = SMOTE(random_state=21)\n",
+    "X_cap_res, y_cap_res = smote.fit_resample(X_train_capped, y_train_capped)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "id": "ddb2c704",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3196, 9)"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# scaling the capped data for logistic regression\n",
+    "scaler = StandardScaler()\n",
+    "X_cap_train_scaled = scaler.fit_transform(X_cap_res)\n",
+    "X_cap_test_scaled = scaler.transform(X_test_capped)\n",
+    "X_cap_train_scaled.shape"
    ]
   },
   {
@@ -2275,9 +2221,55 @@
     "            X_cap_res, y_cap_res = smote.fit_resample(X_train_capped, y_train_capped)\n",
     "        scaled data (will be used for logistic regression):\n",
     "            scaled original data:\n",
-    "                X_scaled = scaler.fit_transform(X_train, y_train)\n",
-    "                X_cap_scaled =scaler.transform(X_test, y_test)\n",
-    "            scaled data_capped\n"
+    "                X_train_scaled = scaler.fit_transform(X_train)\n",
+    "                X_test_scaled\n",
+    "            scaled data_capped\n",
+    "                X_cap_train_scaled =scaler.transform(X_test)\n",
+    "                X_cap_test_scaled\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "ca55f8c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original data:\n",
+      " (3276, 10) (2620, 9) (656, 9) (2620,) (656,)\n",
+      "Capped data:\n",
+      " (3276, 10) (2620, 9) (656, 9) (2620,) (656,)\n",
+      "Original data oversampled:\n",
+      " (3196, 9) (3196,)\n",
+      "Capped data resampled:\n",
+      " (3196, 9) (3196,)\n",
+      "Original data scaled:\n",
+      " (3196, 9) (656, 9)\n",
+      "Capped data scaled:\n",
+      " (3196, 9) (656, 9)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# all data variations\n",
+    "print(\"Original data:\\n\", data.shape, X_train.shape, X_test.shape, y_train.shape, y_test.shape)\n",
+    "print(\"Capped data:\\n\", data_capped.shape, X_train_capped.shape, X_test_capped.shape, y_train_capped.shape, y_test_capped.shape)\n",
+    "print(\"Original data oversampled:\\n\", X_res.shape, y_res.shape)\n",
+    "print(\"Capped data resampled:\\n\", X_cap_res.shape, y_cap_res.shape)\n",
+    "print(\"Original data scaled:\\n\", X_train_scaled.shape, X_test_scaled.shape)\n",
+    "print(\"Capped data scaled:\\n\", X_cap_train_scaled.shape, X_cap_test_scaled.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9299269",
+   "metadata": {},
+   "source": [
+    "## model building, training and optimization"
    ]
   },
   {
