--- a/notebook/main.ipynb
+++ b/notebook/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 1,
    "id": "ef288020",
    "metadata": {},
    "outputs": [],
@@ -27,6 +27,7 @@
     "from lightgbm import LGBMClassifier\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from imblearn.over_sampling import SMOTE\n",
+    "from sklearn.linear_model import LogisticRegression\n",
     "import pickle"
    ]
   },
@@ -2274,10 +2275,91 @@
   },
   {
    "cell_type": "markdown",
+   "id": "166c4ba9",
+   "metadata": {},
+   "source": [
+    "### logistic regressions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "6cb9f6b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def logostic_regression(X_train, X_cap_train, y_train, y_train_cap, X_test, y_test):\n",
+    "\n",
+    "    # model initializatiom\n",
+    "    model_init = LogisticRegression(\n",
+    "        C = 1.0,\n",
+    "        penalty = \"l2\",\n",
+    "        solver = \"lbfgs\",\n",
+    "        max_iter = 1000,\n",
+    "    )\n",
+    "\n",
+    "    # training model with original data\n",
+    "    logreg_model = model_init.fit(\n",
+    "        X_train,\n",
+    "        y_train\n",
+    "    )\n",
+    "\n",
+    "    # model evaluation on the non capped model\n",
+    "    logreg_preds = logreg_model.predict(X_test)\n",
+    "    logreg_acc = accuracy_score(\n",
+    "        y_test, logreg_preds\n",
+    "    )\n",
+    "    logreg_clf_report = classification_report(\n",
+    "        y_test,\n",
+    "        logreg_preds\n",
+    "    )\n",
+    "\n",
+    "    # training model with capped data\n",
+    "    logreg_cap_model = model_init.fit(\n",
+    "        X_cap_train,\n",
+    "        y_train_cap\n",
+    "    )\n",
+    "\n",
+    "    # model evaluation on the capped data model\n",
+    "    logreg_cap_preds = logreg_cap_model.predict(X_test)\n",
+    "    logreg_cap_acc = accuracy_score(\n",
+    "        y_test, logreg_cap_preds\n",
+    "    )\n",
+    "    logreg_cap_clf_report = classification_report(\n",
+    "        y_test,\n",
+    "        logreg_cap_preds\n",
+    "    )\n",
+    "\n",
+    "    # original data model metrics\n",
+    "    print(\"logistic regression with original data accuracy:\\n\", logreg_acc)\n",
+    "    print(\"-\"*50)\n",
+    "    print(\"logistic regression with original data classification report:\\n\", logreg_clf_report)\n",
+    "\n",
+    "    # capped data model metrics\n",
+    "    print(\"logistic regression with capped data accuracy:\\n\", logreg_cap_acc)\n",
+    "    print(\"-\"*50)\n",
+    "    print(\"logistic regression with capped data classification report:\\n\", logreg_cap_clf_report)\n",
+    "\n",
+    "    return logreg_model, logreg_cap_model\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "54eb8637",
    "metadata": {},
    "source": [
     "###  random forest model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29232ae3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def random_forest()"
    ]
   },
   {
@@ -2301,7 +2383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "id": "d73439ca",
    "metadata": {},
    "outputs": [
@@ -3043,8 +3125,8 @@
    "source": [
     "# training the model\n",
     "rf_model.fit(\n",
-    "    X_train,\n",
-    "    y_train\n",
+    "    X_train_scaled,\n",
+    "    \n",
     ")"
    ]
   },
