cat boost algorithm function

--- a/notebook/main.ipynb
+++ b/notebook/main.ipynb
@@ -2492,13 +2492,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "id": "7dfb99e8",
+   "execution_count": null,
+   "id": "6d52536d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# building the model\n",
-    "xgb_model = XGBClassifier(\n",
+    "def xgb_model(X_train, X_cap_train, y_train, y_train_cap, X_test, y_test):\n",
+    "\n",
+    "    # model initialization\n",
+    "    xgb_model = XGBClassifier(\n",
     "    n_estimators = 500,\n",
     "    learning_rate = 0.05,\n",
     "    max_depth = 6,\n",
@@ -2508,7 +2510,23 @@
     "    gamma = 0,\n",
     "    use_label_encoder = False,\n",
     "    eval_metric = \"logloss\"\n",
-    ")"
+    "    )\n",
+    "\n",
+    "    # training the model\n",
+    "    xgb_model.fit(\n",
+    "        X_train,\n",
+    "        y_train\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7dfb99e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# building the model\n"
    ]
   },
   {
