--- a/notebook/main.ipynb
+++ b/notebook/main.ipynb
@@ -2283,13 +2283,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 47,
    "id": "6cb9f6b6",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "def logostic_regression(X_train, X_cap_train, y_train, y_train_cap, X_test, y_test):\n",
+    "def logistic_regression(X_train, X_cap_train, y_train, y_train_cap, X_test, y_test):\n",
     "\n",
     "    # model initializatiom\n",
     "    model_init = LogisticRegression(\n",
@@ -2345,6 +2345,78 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "6a9d61d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "logistic regression with original data accuracy:\n",
+      " 0.3902439024390244\n",
+      "--------------------------------------------------\n",
+      "logistic regression with original data classification report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.00      0.00      0.00       400\n",
+      "           1       0.39      1.00      0.56       256\n",
+      "\n",
+      "    accuracy                           0.39       656\n",
+      "   macro avg       0.20      0.50      0.28       656\n",
+      "weighted avg       0.15      0.39      0.22       656\n",
+      "\n",
+      "logistic regression with capped data accuracy:\n",
+      " 0.3902439024390244\n",
+      "--------------------------------------------------\n",
+      "logistic regression with capped data classification report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.00      0.00      0.00       400\n",
+      "           1       0.39      1.00      0.56       256\n",
+      "\n",
+      "    accuracy                           0.39       656\n",
+      "   macro avg       0.20      0.50      0.28       656\n",
+      "weighted avg       0.15      0.39      0.22       656\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/kami/miniconda3/envs/std-prog/lib/python3.13/site-packages/sklearn/utils/validation.py:2742: UserWarning: X has feature names, but LogisticRegression was fitted without feature names\n",
+      "  warnings.warn(\n",
+      "/home/kami/miniconda3/envs/std-prog/lib/python3.13/site-packages/sklearn/metrics/_classification.py:1731: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", result.shape[0])\n",
+      "/home/kami/miniconda3/envs/std-prog/lib/python3.13/site-packages/sklearn/metrics/_classification.py:1731: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", result.shape[0])\n",
+      "/home/kami/miniconda3/envs/std-prog/lib/python3.13/site-packages/sklearn/metrics/_classification.py:1731: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", result.shape[0])\n",
+      "/home/kami/miniconda3/envs/std-prog/lib/python3.13/site-packages/sklearn/utils/validation.py:2742: UserWarning: X has feature names, but LogisticRegression was fitted without feature names\n",
+      "  warnings.warn(\n",
+      "/home/kami/miniconda3/envs/std-prog/lib/python3.13/site-packages/sklearn/metrics/_classification.py:1731: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", result.shape[0])\n",
+      "/home/kami/miniconda3/envs/std-prog/lib/python3.13/site-packages/sklearn/metrics/_classification.py:1731: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", result.shape[0])\n",
+      "/home/kami/miniconda3/envs/std-prog/lib/python3.13/site-packages/sklearn/metrics/_classification.py:1731: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", result.shape[0])\n"
+     ]
+    }
+   ],
+   "source": [
+    "logreg, logreg_cap = logistic_regression(\n",
+    "    X_train_scaled,\n",
+    "    X_cap_train_scaled,\n",
+    "    y_res,\n",
+    "    y_cap_res,\n",
+    "    X_test,\n",
+    "    y_test\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "54eb8637",
    "metadata": {},
@@ -2354,7 +2426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "29232ae3",
    "metadata": {},
    "outputs": [],
@@ -2411,6 +2483,20 @@
     "    print(\"random forest with capped data classification report:\\n\", rf_cap_clf_report)\n",
     "\n",
     "    return rf_model, rf_cap_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0c25a4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf_model, rf_cap_model = random_forests(\n",
+    "    X_res,\n",
+    "    X_cap_res,\n",
+    "    y_train\n",
+    ")"
    ]
   },
   {
